--- a/home.css
+++ b/home.css
@@ -19,7 +19,7 @@
     background-size: cover;
     margin-bottom: 0;
     padding-bottom: 50px;
-}
+  }
 
   .hamburger {
     border: none;
@@ -50,7 +50,6 @@
     margin-top: 0%;
     font-weight: bold;
     padding-left: 5%;
-    /* background-blend-mode: multiply; */
   }
   
   /* intro section */
@@ -59,6 +58,7 @@
     margin-left: 5%;
     font-size: 110%;
     margin-right: 15%;
+    margin-top: 5%;
     font-weight: normal;
     opacity: 0.7;
   }
@@ -86,7 +86,6 @@
   background: url("./images/main-program.jpg") no-repeat 0, 0 #0a0a0a;;
   background-size: cover;
   margin-top: 0%;
-  
   }
 
 .main-program {
@@ -153,7 +152,6 @@
     align-items: center;
     justify-content: center;
     color: #fff;
-    
   }
 
   .whole-program {
@@ -191,10 +189,8 @@
   }
 
   /* Featured speakers section */
-
 .speakers-section{
   margin-top: 5%
-  
 }
 .featured-speakers {
     text-align: center;
@@ -205,11 +201,11 @@
   .featured-speakers::after {
     content: '';
     height: 2px;
-    width: 10%;
+    width: 5%;
     background: #f35826;
     position: absolute;
     bottom: 0;
-    left: 45%;
+    left: 47%;
   }
   
   .speakers {
@@ -249,6 +245,7 @@
     opacity: 0.4;
     margin-bottom: 3%;
   }
+
   .work_description {
     font-size: 95%;
   }
@@ -260,6 +257,7 @@
   .desktop-footer {
     display: none;
   }
+
 /* Desktop Version */
 @media (min-width: 768px) {
   .hamburger {
@@ -277,7 +275,7 @@
     gap: 15px;
     display: flex;
     justify-content: flex-end;
-    padding-top: 0.5%;
+    padding-top: 1%;
     padding-bottom: 0.5%;
   }
   .social-nav a {
@@ -286,12 +284,17 @@
     font-size: 85%;
   }
 
+  .social-nav a img {
+    width: 20px;
+    height: 20px;
+  }
+
   .summit-logo {
     width: 150px;
     margin-left: 10%;
   }
   .navbar-logo-div {
-  margin-left: 15%;
+  margin-left: 4%;
   }
 
   .navbar {
@@ -307,7 +310,7 @@
 
   .navigation {
     display: flex;
-    /* justify-content: space-between; */
+    align-items: center;
     margin-right:0px;
   }
 
@@ -430,30 +433,30 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-top: 10px;
+    margin-top: 20px;
   } 
 
-.partner-section img {
-  padding-right: 5%;
-}
+  .partner-section img {
+    padding-right: 5%;
+  }
 
 .partner {
   position: relative;
   color: #fff;
   text-align: center;
   font-weight: 500;
-  padding-bottom: 2%;
+  padding-bottom: 1%;
   margin-top: 30px;
 }
 
 .partner::after {
   content: '';
   height: 2px;
-  width: 5%;
+  width: 3%;
   background: #f35826;
   position: absolute;
   bottom: 0;
-  left: 47%;
+  left: 48%;
 }
 
 .partner-img {
