--- a/about.css
+++ b/about.css
@@ -1,66 +1,67 @@
- /* about page */
- * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
-  
-  body {
-    font-family: "lato", sans-serif;
-    min-height: 100vh;
-    background-color: #e5e5e527;
-  }
+/* about page */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
-  .social-media, .navbar {
+body {
+  font-family: "lato", sans-serif;
+  min-height: 100vh;
+  background-color: #e5e5e527;
+}
+
+.social-media,
+.navbar {
   display: none;
-  }
+}
 
- .about-box {
-    background: url("./images/home-page.png") no-repeat;
-    background-size: cover;
-    margin-bottom: 50px;
-  }
+.about-box {
+  background: url("./images/home-page.png") no-repeat;
+  background-size: cover;
+  margin-bottom: 50px;
+}
 
-  .hamburger {
-    border: none;
-    background: transparent;
-    position: relative;
-    margin-top: 8%;
-    padding-left: 5%;
-  }
+.hamburger {
+  border: none;
+  background: transparent;
+  position: relative;
+  margin-top: 8%;
+  padding-left: 5%;
+}
 
-  .hamburger img {
+.hamburger img {
   width: 60%;
   height: 70%;
   margin-bottom: 80%;
-  }
+}
 
-  .about-intro {
-    position: relative;
-    margin-left: 5%;
-    font-size: 110%;
-    margin-right: 15%;
-    font-weight: normal;
-  }
+.about-intro {
+  position: relative;
+  margin-left: 5%;
+  font-size: 110%;
+  margin-right: 15%;
+  font-weight: normal;
+}
 
-  .hello {
-    position: relative;
-    color: #f35826;
-    font-size: 200%;
-    margin-bottom: 0%;
-    padding-left: 5%;
-  }
-  
-  .heading {
-    position: relative;
-    color: #f35826;
-    font-size: 400%;
-    margin-top: 0%;
-    font-weight: bold;
-    padding-left: 5%;
-  }
+.hello {
+  position: relative;
+  color: #f35826;
+  font-size: 200%;
+  margin-bottom: 0%;
+  padding-left: 5%;
+}
 
-  .mission {
+.heading {
+  position: relative;
+  color: #f35826;
+  font-size: 400%;
+  margin-top: 0%;
+  font-weight: bold;
+  padding-left: 5%;
+}
+
+.mission {
   position: relative;
   border: #f2f2f2 2px solid;
   background-color: #fff;
@@ -70,84 +71,84 @@
   margin-left: 3%;
   font-size: 110%;
   opacity: 0.7;
-  }
+}
 
-  .contact {
-    position: relative;
-    text-align: center;
-    margin: 10%;
-  }
+.contact {
+  position: relative;
+  text-align: center;
+  margin: 10%;
+}
 
-  .email {
-   text-decoration: underline;
-   font-weight: bold;
-   opacity: 0.8;
-  }
-  
-  .logo-heading {
-    position: relative;
-    text-align: center;
-    padding-top: 5%;
-    padding-bottom: 2%;
-  }
-  
-  .logo-heading::after {
-    content: '';
-    height: 2px;
-    width: 5%;
-    background: #f35826;
-    position: absolute;
-    bottom: 0;
-    left: 48%;
-  }
-  
-  .logo-creation {
-    text-align: center;
-    margin-top: 20px;
-  }
-  
-  .logo-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: #f2f2f2 2px solid;
-    padding: 5%;
-    margin-right: 3%;
-    margin-left: 3%;
-    margin-top: 5%;
-  }
-  
-  .img-logo {
-    width: 200px;
-  }
-  
-  .summit {
-    font-weight: bold;
-    margin-bottom: 0%;
-  }
-  
-  .logo-text {
-    margin-left: 2%;
-  }
-  
-  .period {
-    border-top: grey solid 1px;
-    border-bottom:grey solid 1px;
-    margin-top: 0%;
-    font-size: 75%;
-  }
+.email {
+  text-decoration: underline;
+  font-weight: bold;
+  opacity: 0.8;
+}
 
-  /* past summits section */
+.logo-heading {
+  position: relative;
+  text-align: center;
+  padding-top: 5%;
+  padding-bottom: 2%;
+}
+
+.logo-heading::after {
+  content: '';
+  height: 2px;
+  width: 5%;
+  background: #f35826;
+  position: absolute;
+  bottom: 0;
+  left: 48%;
+}
+
+.logo-creation {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.logo-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: #f2f2f2 2px solid;
+  padding: 5%;
+  margin-right: 3%;
+  margin-left: 3%;
+  margin-top: 5%;
+}
+
+.img-logo {
+  width: 200px;
+}
+
+.summit {
+  font-weight: bold;
+  margin-bottom: 0%;
+}
+
+.logo-text {
+  margin-left: 2%;
+}
+
+.period {
+  border-top: grey solid 1px;
+  border-bottom: grey solid 1px;
+  margin-top: 0%;
+  font-size: 75%;
+}
+
+/* past summits section */
 .previous-summits {
   border-top: #f2f2f2 2px solid;
   margin-top: 5%;
   display: flex;
   flex-direction: column;
   align-items: center;
-
 }
 
-.previous-heading, .previous-text {
+.previous-heading,
+.previous-text {
   margin-top: 20px;
   margin-bottom: 20px;
 }
@@ -160,7 +161,6 @@
 
 .previous-text {
   text-align: center;
-
 }
 
 .previous-list {
@@ -296,7 +296,6 @@
   font-weight: bold;
   margin-left: 3%;
   padding-top: 15%;
-
 }
 
 .rights {
@@ -312,140 +311,140 @@
 /* desktop version */
 
 @media (min-width: 768px) {
-    .hamburger {
-      display: none;
-    }
-  
-    .heading::after {
-      content: '';
-      height: 2px;
-      width: 4%;
-      background: #f35826;
-      position: absolute;
-      bottom: 0;
-      left: 45%;
-    }
-  
-    header::before {
-      top: 19%;
-    }
-  
-    .social-media {
-      background: #585858;
-      display: block;
-    }
-  
-    .social-nav {
-      padding-right: 10%;
-      display: flex;
-      justify-content: flex-end;
-      padding-top: 1%;
-      padding-bottom: 0.5%;
-    }
-  
-    .social-nav a {
-      padding-right: 2%;
-      text-decoration: none;
-      color: #fff;
-      font-size: 85%;
-    }
+  .hamburger {
+    display: none;
+  }
 
-    .social-nav a img {
-      width: 20px;
-      height: 20px;
-    }
+  .heading::after {
+    content: '';
+    height: 2px;
+    width: 4%;
+    background: #f35826;
+    position: absolute;
+    bottom: 0;
+    left: 45%;
+  }
 
-    .summit-logo {
-        width: 150px;
-        margin-left: 10%;
-      }
+  header::before {
+    top: 19%;
+  }
 
-      .navbar-logo-div {
-      margin-left: 15%;
-      }
-    
-      .navbar {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        -webkit-box-shadow: 0 4px 6px -6px #222;
-        -moz-box-shadow: 0 4px 6px -6px #222;
-        box-shadow: 0 4px 6px -6px #222;
-        padding-top: 1%;
-        padding-right: 28%;
-      }
-    
-      .navigation {
-        display: flex;
-        align-items: center;
-        margin-right:0px;
-      }
-    
-      .navigation a {
-        padding-right: 20%;
-        text-decoration: none;
-        color: #000;
-        font-size: 110%;
-      }
-    
-      .navigation a:hover {
-        color: #f35826;
-      }
-    
-      .ug-btn {
-        color: #f35826;
-        border: #f35826 5px solid;
-        margin-bottom: 5%;
-        min-width: 35%;
-        height: 40px;
-      }
-    
-      .ug-btn:hover {
-        cursor: pointer;
-        color: white;
-        background: #f35826;
-      }
-    
-      .hello {
-        display: none;
-      }
-    
-      .heading {
-        position: relative;
-        text-align: center;
-        padding-top: 6%;
-        padding-right: 20%;
-        padding-left: 20%;
-      }
+  .social-media {
+    background: #585858;
+    display: block;
+  }
 
-      .mission {
-        margin-right: 20%;
-        margin-left: 20%;
-        margin-top: 5%;
-      }
-    
-      .contact {
-        margin-top: 3%;
-        margin-bottom: 3%;
-      }
-    
-      .logo-container {
-        margin-right: 30%;
-        margin-left: 30%;
-      }
+  .social-nav {
+    padding-right: 10%;
+    display: flex;
+    justify-content: flex-end;
+    padding-top: 1%;
+    padding-bottom: 0.5%;
+  }
 
-      .period {
-        font-size: 53%; 
-      }
+  .social-nav a {
+    padding-right: 2%;
+    text-decoration: none;
+    color: #fff;
+    font-size: 85%;
+  }
 
-    /* previous summits section */
+  .social-nav a > img {
+    width: 20px;
+    height: 20px;
+  }
 
-    .previous-div {
-      height: 2px;
-      width: 5%;
-      background: #f35826;
-      
-    }
+  .summit-logo {
+    width: 150px;
+    margin-left: 10%;
+  }
+
+  .navbar-logo-div {
+    margin-left: 15%;
+  }
+
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    -webkit-box-shadow: 0 4px 6px -6px #222;
+    -moz-box-shadow: 0 4px 6px -6px #222;
+    box-shadow: 0 4px 6px -6px #222;
+    padding-top: 1%;
+    padding-right: 28%;
+  }
+
+  .navigation {
+    display: flex;
+    align-items: center;
+    margin-right: 0;
+  }
+
+  .navigation a {
+    padding-right: 20%;
+    text-decoration: none;
+    color: #000;
+    font-size: 110%;
+  }
+
+  .navigation a:hover {
+    color: #f35826;
+  }
+
+  .ug-btn {
+    color: #f35826;
+    border: #f35826 5px solid;
+    margin-bottom: 5%;
+    min-width: 35%;
+    height: 40px;
+  }
+
+  .ug-btn:hover {
+    cursor: pointer;
+    color: white;
+    background: #f35826;
+  }
+
+  .hello {
+    display: none;
+  }
+
+  .heading {
+    position: relative;
+    text-align: center;
+    padding-top: 6%;
+    padding-right: 20%;
+    padding-left: 20%;
+  }
+
+  .mission {
+    margin-right: 20%;
+    margin-left: 20%;
+    margin-top: 5%;
+  }
+
+  .contact {
+    margin-top: 3%;
+    margin-bottom: 3%;
+  }
+
+  .logo-container {
+    margin-right: 30%;
+    margin-left: 30%;
+  }
+
+  .period {
+    font-size: 53%;
+  }
+
+  /* previous summits section */
+
+  .previous-div {
+    height: 2px;
+    width: 5%;
+    background: #f35826;
+  }
+
   .previous-list {
     display: flex;
   }
@@ -485,56 +484,56 @@
 /* mobile menu button */
 
 .hamburger.active {
-    display: none;
-    }
-  
-  .mobile-menu {
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    background: #b226f3;
-    mix-blend-mode: multiply;
-    backdrop-filter: blur(6px);
-    transition: 200ms ease-in-out;
-    transform: scale(0);
-    z-index: 10;
-  }
-  
-  .mobile-menu.active {
-    transform: scale(1);
-  }
-  
-  .mobile-menu-header {
-    display: flex;
-    justify-content: flex-end;
-  }
-  
-  .mobile-menu nav {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: #fff;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 40px;
-    line-height: 44px;
-  }
-  
-  .mobile-menu a {
-    text-decoration: none;
-    color: #fff;
-    cursor: pointer;
-    padding: 4%;
-  }
-  
-  .close-button {
-    border: none;
-    cursor: pointer;
-    outline: none;
-    color: #fff;
-    background: none;
-    font-size: 400%;
-    font-weight: 100;
-  }
+  display: none;
+}
+
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: #b226f3;
+  mix-blend-mode: multiply;
+  backdrop-filter: blur(6px);
+  transition: 200ms ease-in-out;
+  transform: scale(0);
+  z-index: 10;
+}
+
+.mobile-menu.active {
+  transform: scale(1);
+}
+
+.mobile-menu-header {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.mobile-menu nav {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #fff;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 40px;
+  line-height: 44px;
+}
+
+.mobile-menu a {
+  text-decoration: none;
+  color: #fff;
+  cursor: pointer;
+  padding: 4%;
+}
+
+.close-button {
+  border: none;
+  cursor: pointer;
+  outline: none;
+  color: #fff;
+  background: none;
+  font-size: 400%;
+  font-weight: 100;
+}
