--- a/home.css
+++ b/home.css
@@ -1,262 +1,262 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
-  
-  body {
-    font-family: "lato", sans-serif;
-    min-height: 100vh;
-    background-color: #e5e5e527;
-  }
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
-  .social-media, .navbar {
+body {
+  font-family: "lato", sans-serif;
+  min-height: 100vh;
+  background-color: #e5e5e527;
+}
+
+.social-media,
+.navbar {
   display: none;
-  }
+}
 
 .box {
-    background: url("./images/home-page.png") no-repeat;
-    background-size: cover;
-    margin-bottom: 0;
-    padding-bottom: 50px;
-  }
+  background: url("./images/home-page.png") no-repeat;
+  background-size: cover;
+  margin-bottom: 0;
+  padding-bottom: 50px;
+}
 
-  .hamburger {
-    border: none;
-    background: transparent;
-    position: relative;
-    margin-top: 8%;
-    padding-left: 5%;
-  }
+.hamburger {
+  border: none;
+  background: transparent;
+  position: relative;
+  margin-top: 8%;
+  padding-left: 5%;
+}
 
-  .hamburger img {
+.hamburger img {
   width: 60%;
   height: 70%;
   margin-bottom: 80%;
-  }
+}
 
-  .hello {
-    position: relative;
-    color: #f35826;
-    font-size: 200%;
-    margin-bottom: 0%;
-    padding-left: 5%;
-  }
-  
-  .heading {
-    position: relative;
-    color: #f35826;
-    font-size: 400%;
-    margin-top: 0%;
-    font-weight: bold;
-    padding-left: 5%;
-  }
-  
-  /* intro section */
-  .intro {
-    border: 5px #fff solid;
-    margin-left: 5%;
-    font-size: 110%;
-    margin-right: 15%;
-    margin-top: 5%;
-    font-weight: normal;
-    opacity: 0.7;
-  }
-  
-  .due-date {
-    position: relative;
-    font-weight: bold;
-    color: #585858;
-    font-size: 200%;
-    margin-left: 5%;
-    margin-bottom: 1%;
-    margin-top: 5%;
-  }
-  
-  .venue {
-    color: #222121;
-    margin-left: 5%;
-    font-size: 110%;
-    margin-bottom: 5%;
-    opacity: 0.7;
-  }
+.hello {
+  position: relative;
+  color: #f35826;
+  font-size: 200%;
+  margin-bottom: 0%;
+  padding-left: 5%;
+}
 
-  /* Main program section */
-  .program {
-  background: url("./images/main-program.jpg") no-repeat 0, 0 #0a0a0a;;
+.heading {
+  position: relative;
+  color: #f35826;
+  font-size: 400%;
+  margin-top: 0%;
+  font-weight: bold;
+  padding-left: 5%;
+}
+
+/* intro section */
+.intro {
+  border: 5px #fff solid;
+  margin-left: 5%;
+  font-size: 110%;
+  margin-right: 15%;
+  margin-top: 5%;
+  font-weight: normal;
+  opacity: 0.7;
+}
+
+.due-date {
+  position: relative;
+  font-weight: bold;
+  color: #585858;
+  font-size: 200%;
+  margin-left: 5%;
+  margin-bottom: 1%;
+  margin-top: 5%;
+}
+
+.venue {
+  color: #222121;
+  margin-left: 5%;
+  font-size: 110%;
+  margin-bottom: 5%;
+  opacity: 0.7;
+}
+
+/* Main program section */
+.program {
+  background: url("./images/main-program.jpg") no-repeat 0, 0 #0a0a0a;
   background-size: cover;
   margin-top: 0%;
-  }
+}
 
 .main-program {
-    position: relative;
-    color: #fff;
-    padding-top: 10%;
-    padding-bottom: 2%;
-    text-align: center;
+  position: relative;
+  color: #fff;
+  padding-top: 10%;
+  padding-bottom: 2%;
+  text-align: center;
 }
 
 .main-program::after {
-    content: '';
-    height: 2px;
-    width: 5%;
-    background: #f35826;
-    position: absolute;
-    bottom: 0;
-    left: 47%;
-  }
-
-  .activities {
-    padding-top: 5%;
-    list-style-type: none;
-    font-size: 90%;
-    opacity: 0.65;
-  }
-  
-  .activity {
-    display: flex;
-    border: none;
-    background-color: #3c3f46;
-    gap: 10px;
-    margin: 2%;
-  }
-  
-  .activities .activity:hover {
-    cursor: pointer;
-    position: relative;
-    border: #fff 2px solid;
-  }
-  
-  .img-activity {
-    padding: 3%;
-    width: 120px;
-    height: 120px;
-    margin-top: 3%;
-    width: 15%;
-    
-  }
-  
-  .description {
-    display: flex;
-    align-items: center;
-    color: #f35826;
-    font-weight: bold;
-    padding-right: 5%;
-    margin-right: 50px;
-    width: 10%;
-  }
-  
-  .explanation {
-    font-size: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #fff;
-  }
-
-  .whole-program {
-    display: none;
-  }
-  
-  .program-btn {
-    position: relative;
-    display: flex;
-    justify-content: center;
-  }
-  
-  .join {
-    padding: 4%;
-    background-color: #f35826;
-    border: none;
-    color: #fff;
-    font-size: 140%;
-    margin: 5%;
-    margin-bottom: 10%;
-  }
-  
-  .join:hover {
-    cursor: pointer;
-  }
-  
-  .join:hover:hover {
-    background-color: #fff;
-    color: #f35826;
-  }
-  
-  .join:hover:active {
-    background-color: #2230d2;
-    color: #fff;
-  }
-
-  /* Featured speakers section */
-.speakers-section{
-  margin-top: 5%
+  content: '';
+  height: 2px;
+  width: 5%;
+  background: #f35826;
+  position: absolute;
+  bottom: 0;
+  left: 47%;
 }
+
+.activities {
+  padding-top: 5%;
+  list-style-type: none;
+  font-size: 90%;
+  opacity: 0.65;
+}
+
+.activity {
+  display: flex;
+  border: none;
+  background-color: #3c3f46;
+  gap: 10px;
+  margin: 2%;
+}
+
+.activities .activity:hover {
+  cursor: pointer;
+  position: relative;
+  border: #fff 2px solid;
+}
+
+.img-activity {
+  padding: 3%;
+  height: 120px;
+  margin-top: 3%;
+  width: 15%;
+}
+
+.description {
+  display: flex;
+  align-items: center;
+  color: #f35826;
+  font-weight: bold;
+  padding-right: 5%;
+  margin-right: 50px;
+  width: 10%;
+}
+
+.explanation {
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+}
+
+.whole-program {
+  display: none;
+}
+
+.program-btn {
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+
+.join {
+  padding: 4%;
+  background-color: #f35826;
+  border: none;
+  color: #fff;
+  font-size: 140%;
+  margin: 5%;
+  margin-bottom: 10%;
+}
+
+.join:hover {
+  cursor: pointer;
+}
+
+.join:hover:hover {
+  background-color: #fff;
+  color: #f35826;
+}
+
+.join:hover:active {
+  background-color: #2230d2;
+  color: #fff;
+}
+
+/* Featured speakers section */
+.speakers-section {
+  margin-top: 5%;
+}
+
 .featured-speakers {
-    text-align: center;
-    position: relative;
-    padding-bottom: 2%;
-  }
-  
-  .featured-speakers::after {
-    content: '';
-    height: 2px;
-    width: 5%;
-    background: #f35826;
-    position: absolute;
-    bottom: 0;
-    left: 47%;
-  }
-  
-  .speakers {
-    list-style-type: none;
-    margin-top: 5%;
-  }
-  
-  .speakers li {
-    display: flex;
-  }
-  
-  .speaker-img {
-    width: 100px;
-    height: 100px;
-  }
-  
-  .speaker-details {
-    padding-left: 3%;
-  }
-  
-  .name {
-    font-weight: bold;
-    padding-bottom: 3%;
-    padding-top: 2%;
-  }
-  
-  .work {
-    color: #f35826;
-    font-style: italic;
-    padding-bottom: 2%;
-  }
-  
-  .div-item {
-    height: 2px;
-    width: 5%;
-    background: grey; 
-    opacity: 0.4;
-    margin-bottom: 3%;
-  }
+  text-align: center;
+  position: relative;
+  padding-bottom: 2%;
+}
 
-  .work_description {
-    font-size: 95%;
-  }
+.featured-speakers::after {
+  content: '';
+  height: 2px;
+  width: 5%;
+  background: #f35826;
+  position: absolute;
+  bottom: 0;
+  left: 47%;
+}
 
-  .partner-section {
-    display: none;
-  }
+.speakers {
+  list-style-type: none;
+  margin-top: 5%;
+}
 
-  .desktop-footer {
-    display: none;
-  }
+.speakers li {
+  display: flex;
+}
+
+.speaker-img {
+  width: 100px;
+  height: 100px;
+}
+
+.speaker-details {
+  padding-left: 3%;
+}
+
+.name {
+  font-weight: bold;
+  padding-bottom: 3%;
+  padding-top: 2%;
+}
+
+.work {
+  color: #f35826;
+  font-style: italic;
+  padding-bottom: 2%;
+}
+
+.div-item {
+  height: 2px;
+  width: 5%;
+  background: grey;
+  opacity: 0.4;
+  margin-bottom: 3%;
+}
+
+.work_description {
+  font-size: 95%;
+}
+
+.partner-section {
+  display: none;
+}
+
+.desktop-footer {
+  display: none;
+}
 
 /* Desktop Version */
 @media (min-width: 768px) {
@@ -264,10 +264,10 @@
     display: none;
   }
 
- .social-media {
-  display: flex;
-  justify-content: flex-end;
-  background: #585858;
+  .social-media {
+    display: flex;
+    justify-content: flex-end;
+    background: #585858;
   }
 
   .social-nav {
@@ -278,13 +278,14 @@
     padding-top: 1%;
     padding-bottom: 0.5%;
   }
+
   .social-nav a {
     text-decoration: none;
     color: #fff;
     font-size: 85%;
   }
 
-  .social-nav a img {
+  .social-nav a > img {
     width: 20px;
     height: 20px;
   }
@@ -293,8 +294,9 @@
     width: 150px;
     margin-left: 10%;
   }
+
   .navbar-logo-div {
-  margin-left: 4%;
+    margin-left: 4%;
   }
 
   .navbar {
@@ -311,7 +313,7 @@
   .navigation {
     display: flex;
     align-items: center;
-    margin-right:0px;
+    margin-right: 0;
   }
 
   .navigation a {
@@ -407,12 +409,12 @@
   }
 
   .whole-program {
-    display: block; 
+    display: block;
     color: #fff;
   }
 
-   /* Speakers' section */
-   .speakers {
+  /* Speakers' section */
+  .speakers {
     display: grid;
     grid-template-columns: 1fr 1fr;
     margin-left: 10%;
@@ -434,81 +436,78 @@
     flex-direction: row;
     justify-content: center;
     margin-top: 20px;
-  } 
+  }
 
-  .partner-section img {
+  .partner {
+    position: relative;
+    color: #fff;
+    text-align: center;
+    font-weight: 500;
+    padding-bottom: 1%;
+    margin-top: 30px;
+  }
+
+  .partner::after {
+    content: '';
+    height: 2px;
+    width: 3%;
+    background: #f35826;
+    position: absolute;
+    bottom: 0;
+    left: 48%;
+  }
+
+  .partner-img {
+    width: 100px;
+    height: 100px;
     padding-right: 5%;
   }
 
-.partner {
-  position: relative;
-  color: #fff;
-  text-align: center;
-  font-weight: 500;
-  padding-bottom: 1%;
-  margin-top: 30px;
-}
-
-.partner::after {
-  content: '';
-  height: 2px;
-  width: 3%;
-  background: #f35826;
-  position: absolute;
-  bottom: 0;
-  left: 48%;
-}
-
-.partner-img {
-  width: 100px;
-  height: 100px;
-}
-
   /* Footer section */
   .desktop-footer {
-  display: flex;
-  justify-content: center;
-  gap: 30px;
-  padding-top: 5%;
-  padding-bottom: 5%;
-  padding-left: 1%;
-  padding-right: 1%;
-  background-color: #fff;
- }
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    padding-top: 5%;
+    padding-bottom: 5%;
+    padding-left: 1%;
+    padding-right: 1%;
+    background-color: #fff;
+  }
 
- .footer-logo {
-  display: flex;
-}
+  .footer-logo {
+    display: flex;
+  }
 
-.footer-logo-img {
-  width: 100px;
-  height: 100px;
-  padding-top: 6%;
-}
+  .footer-logo-img {
+    width: 100px;
+    height: 100px;
+    padding-top: 6%;
+  }
 
-.summit-finland {
-  font-size: 100%;
-  font-weight: bold;
-  margin-left: 3%;
-  padding-top: 15%;
+  .summit-finland {
+    font-size: 100%;
+    font-weight: bold;
+    margin-left: 3%;
+    padding-top: 15%;
+  }
 
-}
-.rights {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 90%;
-  padding-left: 5%;
-  opacity: 0.6;
-  font-weight: bold;
-}
+  .rights {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 90%;
+    padding-left: 5%;
+    opacity: 0.6;
+    font-weight: bold;
+  }
 }
 
 /* mobile menu button */
 
 .hamburger.active {
   display: none;
-  }
+}
 
 .mobile-menu {
   position: fixed;
