--- a/home.css
+++ b/home.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: "lato", sans-serif;
+  font-family: 'lato', sans-serif;
   min-height: 100vh;
   background-color: #e5e5e527;
 }
@@ -16,7 +16,7 @@ body {
 }
 
 .box {
-  background: url("./images/home-page.png") no-repeat;
+  background: url('./images/home-page.png') no-repeat;
   background-size: cover;
   margin-bottom: 0;
   padding-bottom: 50px;
@@ -84,7 +84,7 @@ body {
 
 /* Main program section */
 .program {
-  background: url("./images/main-program.jpg") no-repeat 0, 0 #0a0a0a;
+  background: url('./images/main-program.jpg') no-repeat 0, 0 #0a0a0a;
   background-size: cover;
   margin-top: 0%;
 }
@@ -250,12 +250,97 @@ body {
   font-size: 95%;
 }
 
-.partner-section {
-  display: none;
+/* Partners' section */
+.partner-section img {
+  padding-right: 5%;
 }
 
+.partner-section {
+  background: #414246;
+  padding-bottom: 5%;
+  padding-top: 2%;
+  margin-top: 5%;
+}
+
+.partner {
+  position: relative;
+  color: #fff;
+  text-align: center;
+  font-weight: 500;
+  padding-bottom: 2%;
+  margin-top: 30px;
+}
+
+.partner::after {
+  content: '';
+  height: 2px;
+  width: 5%;
+  background: #f35826;
+  position: absolute;
+  bottom: 0;
+  left: 47%;
+}
+
+.img-rows {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.img-row1 {
+  display: flex;
+  gap: 50px;
+  margin-bottom: 30px;
+  margin-top: 30px;
+}
+
+.img-row2 {
+  display: flex;
+  gap: 80px;
+}
+
+.partner-img {
+  width: 100px;
+  height: 100px;
+}
+
+/* Footer section */
 .desktop-footer {
-  display: none;
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  padding-top: 5%;
+  padding-bottom: 5%;
+  padding-left: 1%;
+  padding-right: 1%;
+  background-color: #fff;
+}
+
+.footer-logo {
+  display: flex;
+}
+
+.footer-logo-img {
+  width: 100px;
+  height: 100px;
+  padding-top: 6%;
+}
+
+.summit-finland {
+  font-size: 100%;
+  font-weight: bold;
+  margin-left: 3%;
+  padding-top: 15%;
+}
+
+.rights {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 90%;
+  padding-left: 5%;
+  opacity: 0.6;
+  font-weight: bold;
 }
 
 /* Desktop Version */
@@ -461,45 +546,6 @@ body {
     width: 100px;
     height: 100px;
     padding-right: 5%;
-  }
-
-  /* Footer section */
-  .desktop-footer {
-    display: flex;
-    justify-content: center;
-    gap: 30px;
-    padding-top: 5%;
-    padding-bottom: 5%;
-    padding-left: 1%;
-    padding-right: 1%;
-    background-color: #fff;
-  }
-
-  .footer-logo {
-    display: flex;
-  }
-
-  .footer-logo-img {
-    width: 100px;
-    height: 100px;
-    padding-top: 6%;
-  }
-
-  .summit-finland {
-    font-size: 100%;
-    font-weight: bold;
-    margin-left: 3%;
-    padding-top: 15%;
-  }
-
-  .rights {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 90%;
-    padding-left: 5%;
-    opacity: 0.6;
-    font-weight: bold;
   }
 }
 
